# weateher_api_service

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/misc/: utils.py
src/services/: aws_client.py  openweather_client.py  weather_service.py
