[project]
name = "weater-api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.2.0",
    "aiohttp[speedups]>=3.11.10",
    "asyncio-throttle>=1.0.2",
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.33.0",
]
